--- a/lib_qrcode/src/main/AndroidManifest.xml
+++ b/lib_qrcode/src/main/AndroidManifest.xml
@@ -2,5 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.hw.lib_qrcode">
 
-    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <application>
+        <activity android:name=".qrcode.ScanCodeActivity" />
+        <activity android:name=".photo.CameraActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".photo.CropActivity" android:screenOrientation="portrait"/>
+    </application>
 </manifest>
