修改依赖库方式

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,6 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation project(':lib_qrcode')
+    implementation 'com.github.hewei129:Qrcode:1.0.6'
+//    implementation project(':lib_qrcode')
 }
